- prevent slideshow jumping -  add some less

--- a/templates/base_template/mediacenter.css
+++ b/templates/base_template/mediacenter.css
@@ -442,8 +442,8 @@
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
-  background: lighten(@eqdkpContentFontColor, 50);
-  background: rgba(0,0,0, .2);
+  background: lighten(@eqdkpContentFontColor, 50) !important;
+  background: @eqdkpContentContrastColor;
   display: inline-block;
   _display: block;
   *display: block;
@@ -455,7 +455,7 @@
   }
   
   .mc_featured_here a {
-  	background: @eqdkpContentFontColor;
+  	background: @eqdkpContentFontColor !important;
   	background: rgba(0,0,0, .8);
   }
 
@@ -478,3 +478,4 @@
 		max-width: 100%;
 	}
 }
+#slider_mc_featured {height:180px;}
